--- a/YanikoRestaurant/Views/Shared/_Layout.cshtml
+++ b/YanikoRestaurant/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products"
+                                asp-action="Index">Menu</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ingredients"
                                 asp-action="Index">Ingredients</a>
                         </li>
