--- a/YanikoRestaurant/Views/Shared/_Layout.cshtml
+++ b/YanikoRestaurant/Views/Shared/_Layout.cshtml
@@ -1,4 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using YanikoRestaurant.Data
+@using YanikoRestaurant.Models
+@inject UserManager<ApplicationUser> UserManager
+@inject ApplicationDbContext DbContext
+
+@{
+    var userId = UserManager.GetUserId(User);
+    var orderCount = DbContext.Orders.Count(o => o.UserId == userId);
+}
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,6 +19,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/YanikoRestaurant.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -33,8 +45,14 @@
                                 asp-action="Index">Ingredients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Create">Create
+                                Order</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="ViewOrders">
+                                Orders <span
+                                    class="position-absolute start-40 translate-middle badge bg-success">@orderCount</span>
+                            </a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
