--- a/YanikoRestaurant/Views/Shared/_LoginPartial.cshtml
+++ b/YanikoRestaurant/Views/Shared/_LoginPartial.cshtml
@@ -39,10 +39,11 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-primary border border-primary rounded" asp-area="Identity"
+                asp-page="/Account/Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Log in</a>
+            <a class="nav-link text-white bg-primary rounded mx-2" asp-area="Identity" asp-page="/Account/Login">Log in</a>
         </li>
     }
 </ul>
