--- a/YanikoRestaurant/Views/Products/Index.cshtml
+++ b/YanikoRestaurant/Views/Products/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="col-sm-6 col-md-4 gap-4">
             <form asp-action="delete" asp-controller="Products" method="post">
                 <input type="hidden" name="id" value="@prod.ProductId" />
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-4" style="width: 18rem;">
                     @{
                         var imageUrl = prod?.ImageUrl;
                         if (!string.IsNullOrEmpty(imageUrl) && (imageUrl.StartsWith("http") || imageUrl.StartsWith("https")))
