--- a/YanikoRestaurant/Views/Shared/_LoginPartial.cshtml
+++ b/YanikoRestaurant/Views/Shared/_LoginPartial.cshtml
@@ -32,7 +32,8 @@
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
                 asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit"
+                    class="nav-link btn btn-link text-primary border border-primary rounded">Logout</button>
             </form>
         </li>
     }
