--- a/YanikoRestaurant/Views/Products/Index.cshtml
+++ b/YanikoRestaurant/Views/Products/Index.cshtml
@@ -41,7 +41,7 @@
                             imageUrl = Url.Content("~/images/" + imageUrl);
                         }
                     }
-                    <img src="@imageUrl" class="card-img-top fixed-image-height" alt="@prod?.Description">
+                    <img src="@imageUrl" class="card-img-top img-fluid" alt="@prod?.Description">
                     <div class="card-body">
                         <h5 class="card-title">@prod?.Name</h5>
                         <p class="card-text">@prod?.Description</p>
