--- a/YanikoRestaurant/wwwroot/css/site.css
+++ b/YanikoRestaurant/wwwroot/css/site.css
@@ -1,22 +1,42 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+.food-item {
+    border-radius: 32px;
+    padding: 8px;
+    height: 8rem;
+}
+
+.food-item-category-img {
+    margin-top: 2.6rem;
+}
+.food-item-category-pizza {
+    margin-left: 6px;
+}
+.food-item-category-tacos {
+    margin-left: 3px;
 }
