--- a/YanikoRestaurant/Views/Orders/Create.cshtml
+++ b/YanikoRestaurant/Views/Orders/Create.cshtml
@@ -26,7 +26,7 @@
                                 imageUrl = Url.Content("~/images/" + imageUrl);
                             }
                         }
-                        <img src="@imageUrl" class="card-img-top fixed-image-height" alt="@product?.Description">
+                        <img src="@imageUrl" class="card-img-top img-fluid" alt="@product?.Description">
                     </div>
                     <div class="card-body">
                         @product?.Name - @product?.Price.ToString("C", new System.Globalization.CultureInfo("fr-FR"))
