chore: update home page, add fixed-top class in navbar

--- a/YanikoRestaurant/Views/Orders/ViewOrders.cshtml
+++ b/YanikoRestaurant/Views/Orders/ViewOrders.cshtml
@@ -32,7 +32,7 @@
                 <td>
                     <form asp-action="DeleteOrder" asp-controller="Orders" method="post">
                         <input type="hidden" name="orderId" value="@order.OrderId" />
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                     </form>
                 </td>
             </tr>
