--- a/YanikoRestaurant/Views/Home/Index.cshtml
+++ b/YanikoRestaurant/Views/Home/Index.cshtml
@@ -12,8 +12,9 @@
 
 <div class="container mt-4">
     <div class="row">
-        <div class="col-md-6">
-            <h1 class="display-4 fw-bold mb-4">Order your<br>favourite Foods</h1>
+        <div class="col-lg-6 mb-4">
+            <h1 class="display-4 fw-bold mb-4">Order your <br class="d-none d-lg-inline">favourite
+                Foods</h1>
             <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua.</p>
             <h3 class="mb-4">Total order : <span class="text-primary">@totalAmountOrder€</span></h3>
@@ -22,7 +23,7 @@
                     asp-action="Create">Create
                     Order</a>
             </div>
-            <div class="d-flex">
+            <div class="d-flex food-items-container">
                 <div class="food-item bg-success bg-opacity-10 me-3 shadow">
                     <span>Burger</span>
                     <div class="food-item-category-img">
@@ -38,13 +39,13 @@
                 <div class="food-item bg-warning bg-opacity-10 me-3 shadow">
                     <span>Donuts</span>
                     <div class="food-item-category-img">
-                        <img src="~/images/burger.png" alt="a burger" width="52px" class="rounded-pill">
+                        <img src="~/images/hero-image.png" alt="a burger" width="52px" class="rounded-pill">
                     </div>
                 </div>
                 <div class="food-item bg-success bg-opacity-10 shadow">
                     <span class="food-item-category-pizza">Pizza</span>
                     <div class="food-item-category-img">
-                        <img src="~/images/burger.png" alt="a burger" width="52px" class="rounded-pill">
+                        <img src="~/images/pizza.png" alt="a burger" width="52px" class="rounded-pill">
                     </div>
                 </div>
             </div>
@@ -62,4 +63,44 @@
             </div>
         </div>
     </div>
+
+    <!-- New Featured Dishes Section -->
+    <section class="featured-dishes my-5">
+        <h2 class="text-center" style="margin-bottom: 38px;">Featured Dishes</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="featured-dish">
+                    <img src="~/images/burger.png" class="card-img-top" alt="Spicy Chicken Burger">
+                    <div class="text-center">
+                        <h5 class="">Spicy Chicken Burger</h5>
+                        <p class="">Juicy chicken patty with our secret spicy sauce</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="featured-dish">
+                    <img src="~/images/pizza.png" class="card-img-top" alt="Vegetarian Pizza">
+                    <div class="text-center">
+                        <h5 class="">Vegetarian Pizza</h5>
+                        <p class="">Loaded with fresh veggies and our special cheese blend</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="featured-dish">
+                    <img src="~/images/Tacos.png" class="card-img-top" alt="Delicious Tacos">
+                    <div class="text-center">
+                        <h5 class="">Tacos</h5>
+                        <p class="">Tacos with beef</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- View All button -->
+        <div class="text-center mt-4">
+            <a class="btn btn-lg btn-outline-primary view-all-btn" asp-controller="Products" asp-action="Index">View All
+                Menu Items</a>
+        </div>
+    </section>
 </div>
