--- a/YanikoRestaurant/Views/Shared/_Layout.cshtml
+++ b/YanikoRestaurant/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav
+            class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/logo.png"
                         alt="logo of the restaurant" style="width: 46px;"></a>
