update ProductsController and Index View

--- a/YanikoRestaurant/Views/Orders/ViewOrders.cshtml
+++ b/YanikoRestaurant/Views/Orders/ViewOrders.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "My Orders";
 }
 
-<table class="table table-bordered mt-5">
+<p class="mt-4">Minimum Amount to Purchase 18€</p>
+<table class="table table-bordered mt-2">
     <thead>
         <tr>
             <th>Order ID</th>
