--- a/YanikoRestaurant/Views/Products/Index.cshtml
+++ b/YanikoRestaurant/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
     @foreach (Product prod in Model)
     {
         <div class="col-sm-6 col-md-4 gap-4">
-            <form asp-action="delete" asp-controller="Products" method="post">
+            <form asp-action="DeleteConfirmed" asp-controller="Products" method="post">
                 <input type="hidden" name="id" value="@prod.ProductId" />
                 <div class="card mb-4" style="width: 18rem;">
                     @{
