--- a/YanikoRestaurant/Views/Products/AddEdit.cshtml
+++ b/YanikoRestaurant/Views/Products/AddEdit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = $"{ViewBag.Operation} Menu Item";
 }
 
-<h1>@ViewBag.Operation Menu Item</h1>
+<h1 class="mb-4 mt-2">@ViewBag.Operation Menu Item</h1>
 
 <form asp-action="AddEdit" method="post" enctype="multipart/form-data" class="mb-5">
     <input type="hidden" asp-for="ProductId" />
