feat: animate view-all-menu btn

--- a/YanikoRestaurant/Views/Home/Index.cshtml
+++ b/YanikoRestaurant/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
         <!-- View All button -->
         <div class="text-center mt-4">
             <a class="btn btn-lg btn-outline-primary view-all-btn" asp-controller="Products" asp-action="Index">View All
-                Menu Items</a>
+                Menu Items <i class="bi bi-arrow-right-circle ms-2"></i></a>
         </div>
     </section>
 </div>
