add delivery section

--- a/YanikoRestaurant/Views/Home/Index.cshtml
+++ b/YanikoRestaurant/Views/Home/Index.cshtml
@@ -103,4 +103,31 @@
                 Menu Items <i class="bi bi-arrow-right-circle ms-2"></i></a>
         </div>
     </section>
+
+    <!-- Delivery -->
+    <section class="container mt-5">
+        <h2 class="text-center mb-5">How Our Delivery Works</h2>
+        <div class="position-relative">
+            <div class="row text-center">
+                <div class="col-md-4 delivery-step animate-fadeInUp" style="animation-delay: 0.3s;">
+                    <i class="bi bi-cart-check delivery-icon text-primary"></i>
+                    <h4>Place Your Order</h4>
+                    <p>Choose your favorite dishes and add them to your cart</p>
+                </div>
+                <div class="col-md-4 delivery-step animate-fadeInUp" style="animation-delay: 0.6s;">
+                    <i class="bi bi-bicycle delivery-icon text-success"></i>
+                    <h4>We Prepare & Deliver</h4>
+                    <p>Our chefs prepare your meal and our delivery partner brings it to you</p>
+                </div>
+                <div class="col-md-4 delivery-step animate-fadeInUp" style="animation-delay: 0.9s;">
+                    <i class="bi bi-emoji-smile delivery-icon text-warning"></i>
+                    <h4>Enjoy Your Food</h4>
+                    <p>Receive your order and enjoy your delicious meal!</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-5">
+            <p class="lead">Estimated delivery time: 30-45 minutes</p>
+        </div>
+    </section>
 </div>
