--- a/YanikoRestaurant/Views/Ingredients/Index.cshtml
+++ b/YanikoRestaurant/Views/Ingredients/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "List of Restaurant ingredients";
 }
 
-<h1>Ingredients</h1>
+<h1 class="mt-4">Ingredients</h1>
 
 <a asp-action="Create">Create New Ingredient</a>
 
 
-<table class="table border mt-4">
+<table class="table border mb-5">
     <thead>
         <tr>
             <th style="width: 70%">@Html.DisplayNameFor(model => model.Name)</th>
