--- a/YanikoRestaurant/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/YanikoRestaurant/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,11 +9,11 @@
     }
 }
 
-<div class="container">
-    <h1>Manage your account</h1>
+<div class="container mt-4 mb-5">
+    <h1 class="my-2">Manage your account</h1>
 
     <div>
-        <h2>Change your account settings</h2>
+        <h3>Change your account settings</h3>
         <hr />
         <div class="row">
             <div class="col-md-3">
