--- a/YanikoRestaurant/Views/Ingredients/Create.cshtml
+++ b/YanikoRestaurant/Views/Ingredients/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create Ingredient";
 }
 
-<h3>New ingredient</h3>
+<h3 class="mt-4">New ingredient</h3>
 
 <div class="row">
     <div class="col-md-4">
