--- a/YanikoRestaurant/Views/Orders/Cart.cshtml
+++ b/YanikoRestaurant/Views/Orders/Cart.cshtml
@@ -1,10 +1,10 @@
 @model OrderViewModel
 
-<h1>My Cart</h1>
+<h1 class="my-4">My Cart</h1>
 
 <!--Form to finalize and create the order-->
 <form asp-action="PlaceOrder" method="post">
-    <h3>Order Items</h3>
+    <h3 class="mb-2">Order Items</h3>
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -28,7 +28,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="bg-primary bg-gradient text-white fw-bold">@Model.TotalAmount.ToString("C")</td>
+                <td class="bg-primary bg-gradient text-white fw-bold">@Model.TotalAmount.ToString("C", new
+                    System.Globalization.CultureInfo("fr-FR"))</td>
             </tr>
         </tbody>
     </table>
