--- a/YanikoRestaurant/Views/Orders/Create.cshtml
+++ b/YanikoRestaurant/Views/Orders/Create.cshtml
@@ -19,10 +19,10 @@
                 </option>
                 @foreach (var category in ViewBag.Categories)
                 {
-                    <option value="@category.CategoryId"
-                        selected="@(category.CategoryId.ToString() == ViewData["category"]?.ToString())">
+                        <option value="@category.CategoryId"
+                            selected="@(category.CategoryId.ToString() == ViewData["category"]?.ToString())">
                         @category.Name
-                    </option>
+                        </option>
                 }
             </select>
         </div>
@@ -32,13 +32,13 @@
     </div>
 </form>
 
-<div class="row">
+<div class="row mb-5">
     @foreach (Product product in @Model.Products!)
     {
-        <div class="col-sm-6 col-md-4 col-lg-3 gap-2">
-            <form asp-action="AddItem" method="post">
-                <div class="card mb-4" style="width: 16rem; height: 22rem;">
-                    <div>
+            <div class="col-sm-6 col-md-4 col-lg-3 gap-2">
+                <form asp-action="AddItem" method="post">
+                    <div class="card mb-4" style="width: 16rem; height: 22rem;">
+                        <div>
                         @{
                             var imageUrl = product?.ImageUrl;
                             var placeholderImageUrl = Url.Content("/image-placeholder.jpg");
@@ -52,16 +52,16 @@
                                 imageUrl = Url.Content("~/images/" + imageUrl);
                             }
                         }
-                        <img src="@imageUrl" class="card-img-top img-fluid" alt="@product?.Description">
-                    </div>
-                    <div class="card-body">
+                            <img src="@imageUrl" class="card-img-top img-fluid" alt="@product?.Description">
+                        </div>
+                        <div class="card-body">
                         @product?.Name - @product?.Price.ToString("C", new System.Globalization.CultureInfo("fr-FR"))
-                        <input type="hidden" value="@product?.ProductId" name="prodId" />
-                        <input type="number" name="prodQty" class="form-control my-2" placeholder="Quantity" required />
-                        <button class="btn btn-info" type="submit">Add <i class="bi bi-cart2 mr-2"></i></button>
+                            <input type="hidden" value="@product?.ProductId" name="prodId" />
+                            <input type="number" name="prodQty" class="form-control my-2" placeholder="Quantity" required />
+                            <button class="btn btn-info" type="submit">Add <i class="bi bi-cart2 mr-2"></i></button>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
+                </form>
+            </div>
     }
 </div>
