--- a/YanikoRestaurant/Views/Products/Index.cshtml
+++ b/YanikoRestaurant/Views/Products/Index.cshtml
@@ -49,7 +49,7 @@
         </div>
     </div>
 </form>
-<div class="row">
+<div class="row mb-5">
     @foreach (Product prod in Model)
     {
         <div class="col-sm-6 col-md-4 gap-4">
