--- a/YanikoRestaurant/Views/Home/Index.cshtml
+++ b/YanikoRestaurant/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                 <div class="food-item bg-danger bg-opacity-10 me-3 shadow">
                     <span class="food-item-category-tacos">Tacos</span>
                     <div class="food-item-category-img">
-                        <img src="~/images/burger.png" alt="a burger" width="52px" class="rounded-pill">
+                        <img src="~/images/Tacos.png" alt="a burger" width="52px" class="rounded-pill">
                     </div>
                 </div>
                 <div class="food-item bg-warning bg-opacity-10 me-3 shadow">
