--- a/YanikoRestaurant/Views/Ingredients/Details.cshtml
+++ b/YanikoRestaurant/Views/Ingredients/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Ingredient Details";
 }
 
-<h1>@Model.Name Details</h1>
+<h1 class="my-4">@Model.Name Details</h1>
 
 @if (Model.ProductIngredients != null && Model.ProductIngredients.Any())
 {
