--- a/YanikoRestaurant/Views/Ingredients/Index.cshtml
+++ b/YanikoRestaurant/Views/Ingredients/Index.cshtml
@@ -8,8 +8,7 @@
 
 <a asp-action="Create">Create New Ingredient</a>
 
-
-<table class="table border mb-5">
+<table class="table border my-4">
     <thead>
         <tr>
             <th style="width: 70%">@Html.DisplayNameFor(model => model.Name)</th>
