--- a/YanikoRestaurant/Views/Home/Index.cshtml
+++ b/YanikoRestaurant/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 Foods</h1>
             <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua.</p>
-            <h3 class="mb-4">Total order : <span class="text-primary">@totalAmountOrder €</span></h3>
+            <h3 class="mb-4">Total order : <span class="text-primary">@totalAmountOrder.ToString("F2") €</span></h3>
             <div class="d-flex align-items-center" style="margin-bottom: 50px;">
                 <a class="btn btn-primary rounded-pill px-4" asp-area="" asp-controller="Orders"
                     asp-action="Create">Create
