--- a/YanikoRestaurant/Views/Ingredients/Delete.cshtml
+++ b/YanikoRestaurant/Views/Ingredients/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = $"Delete {Model.Name} Ingredient";
 }
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="my-4">Are you sure you want to delete this?</h3>
 
 <div>
     <h4>@Model.Name</h4>
